# libpgo

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  release-notes.txt  setup.py
src/: CMakeLists.txt
src/c/: CMakeLists.txt  pgo_c.cpp  pgo_c.h  pgo_c.symobl.txt  pgo_c.version  pgo_c_def.h
src/core/animationIO/: CMakeLists.txt  abcWriter.cpp  abcWriter.h  animationLoader.cpp  animationLoader.h
src/core/basicAlgorithms/: CMakeLists.txt  averagingBuffer.cpp  basicAlgorithms.h  containerHelper.cpp  containerHelper.h  disjointSet.cpp  disjointSet.h  fileIO.cpp  fileIO.h  filterIterator.h  graphSearchAlgorithms.h  kmeans.h  range.h  reversibleHeap.h  stringHelper.cpp  stringHelper.h  timeTable.h  vectorStack.h
src/core/basicIO/: CMakeLists.txt  basicIO.h
src/core/cgalInterface/: CGALUtilities.h  CMakeLists.txt  cgalBasic.h  cgalInterface.cpp  cgalInterface.h
src/core/configFileJSON/: CMakeLists.txt  configFileJSON.cpp  configFileJSON.h
src/core/constraintPotentialEnergies/: multiVertexConstrainedRigidMotion.cpp  multiVertexConstrainedRigidMotion.h  multiVertexPullingSoftConstraints.cpp  multiVertexPullingSoftConstraints.h  multiVertexPullingSoftConstraintsPOrder.cpp  multiVertexSlidingSoftConstraints.cpp  multiVertexSlidingSoftConstraints.h  potentialEnergyAligningMeshConnectivity.cpp  potentialEnergyAligningMeshConnectivity.h
src/core/contact/: CCDKernel.cpp  CCDKernel.h  contactEnergyUtilities.cpp  contactEnergyUtilities.h  pointPenetrationEnergy.cpp  pointPenetrationEnergy.h  pointTrianglePairCouplingEnergyWithCollision.cpp  pointTrianglePairCouplingEnergyWithCollision.h  triangleMeshExternalContactHandler.cpp  triangleMeshExternalContactHandler.h  triangleMeshSelfContactDetection.h  triangleMeshSelfContactHandler.cpp  triangleMeshSelfContactHandler.h
src/core/eigenSupport/: CMakeLists.txt  EigenARPACKSupport.cpp  EigenARPACKSupport.h  EigenDef.h  EigenMKLPardisoSupport.h  EigenSupport.cpp  rawPardisoSolver.h
src/core/genericPotentialEnergies/: CMakeLists.txt  laplacianProblem.cpp  laplacianProblem.h  linearPotentialEnergy.cpp  linearPotentialEnergy.h  quadraticPotentialEnergy.cpp
src/core/geogramInterface/: CMakeLists.txt  geogramInterface.cpp  geogramInterface.h
src/core/geometryPotentialEnergies/: CMakeLists.txt  centerOfMassMatchingEnergy.cpp  centerOfMassMatchingEnergy.h  smoothRSEnergy.cpp  surfaceSmoothnessAbsoluteMeanCurvature.cpp  surfaceSmoothnessAbsoluteMeanCurvature.h  surfaceTriangleDeformation.cpp  surfaceTriangleDeformation.h  triangleAffineToPositionEnergy.cpp  vertexAffineToPositionEnergy.cpp  vertexAffineToPositionEnergy.h
src/core/interpolationCoordinates/: CMakeLists.txt  GreenCoordinates.cpp  GreenCoordinates.h  interpolationCoordinatesBase.h  meanValueCoordinates.cpp
src/core/libiglInterface/: CMakeLists.txt  libiglInterface.cpp  libiglInterface.h
src/core/macros/: CMakeLists.txt  averager.h  matrixMultiplyMacros.h  triple.h  valueIndex.h
src/core/mesh/: boundingBox.cpp  boundingBox.h  boundingVolumeTree.cpp  boundingVolumeTree.h  boundingVolumeTreeBase.cpp  boundingVolumeTreeBase.h  createTriMesh.cpp  createTriMesh.h  geometryQuery.cpp  geometryQuery.h  halfSpace.h  initPredicates.h  labelOuterTets.h  lineSegmentDistance.cpp  meshIntersection.cpp  meshLinearAlgebra.h  plane.h  pointInsideOutsideQuery.h  predicates.cpp  rectKey.h  simpleSphere.cpp  simpleSphere.h  tetKey.h  tetMeshGeo.cpp  tetMeshGeo.h  tetMeshManifold.cpp  tetrahedron.h  triKey.h  triMeshGeo.cpp  triMeshGeo.h  triMeshGeoLoader.cpp  triMeshPseudoNormal.h  triMeshSampler.cpp  triMeshSampler.h  triangle.cpp  triangle.h  triangleSampler.h  tribox3.cpp  tribox3.h  verticesCorrespondence.cpp  (+3 more)
src/core/nonlinearOptimization/: CMakeLists.txt  IpoptOptimizer.cpp  IpoptOptimizer.h  IpoptProblem.cpp  NewtonRaphsonSolver.cpp  NewtonRaphsonSolver.h  automaticDifferentiation_autodiff.h  barrierFunction.cpp  constraintFunctions.cpp  constraintFunctions.h  constraintFunctionsAssember.h  determinantDerivatives.cpp  finiteDifference.cpp  finiteDifference.h  knitroOptimizer.cpp  knitroOptimizer.h  knitroProblem.cpp  lagrangian.cpp  lagrangian.h  lineSearch.cpp  linearConstraintFunctions.h  minimizeEnergy.cpp  minimizeEnergy.h  naturalCubicSplineDerivatives.cpp  naturalCubicSplineFitting.h  nonlinearProblem.cpp  nonlinearProblem.h  polarDecompositionDerivatives.cpp  polarDecompositionDerivatives.h  potentialEnergies.cpp  potentialEnergies.h  potentialEnergy.h  potentialEnergyFromConstraintFunctions.cpp  potentialEnergyFromConstraintFunctions.h  svdDerivatives.cpp  svdDerivatives.h
src/core/perlinNoise/: perlinNoise.h  perlinWind.cpp  perlinWind.h
src/core/pgoLogging/: CMakeLists.txt  pgoLogging.cpp  pgoLogging.h
src/core/simulation/: CMakeLists.txt  TRBDF2TimeIntegrator.cpp  TRBDF2TimeIntegrator.h  TRBDF2TimeIntegratorHelper.cpp  TRBDF2TimeIntegratorHelper.h  implicitBackwardEulerTimeIntegrator.cpp  implicitBackwardEulerTimeIntegrator.h  implicitBackwardEulerTimeIntegratorHelper.cpp  implicitBackwardEulerTimeIntegratorHelper.h  timeIntegrator.h  timeIntegratorSolver.h
src/core/solidDeformationModel/: CMakeLists.txt  centerOfMassEnergy.cpp  centerOfMassEnergy.h  deformationModel.h  deformationModelAssembler.cpp  deformationModelAssembler.h  deformationModelAssemblerElastic.cpp  deformationModelAssemblerElasticFullPlastic.cpp  deformationModelAssemblerElasticFullPlastic.h  deformationModelAssemblerElasticFullPlasticImpl.h  deformationModelAssemblerElasticImpl.h  deformationModelAssemblerElasticMultiPlastic.h  deformationModelAssemblerElasticMultiPlasticImpl.h  deformationModelAssemblerImpl.h  deformationModelEnergy.cpp  deformationModelEnergy.h  deformationModelFDTest.cpp  deformationModelFDTest.h  deformationModelManager.cpp  deformationModelManager.h  elasticModel.h  elasticModel1DCubicSpline.cpp  elasticModel1DCubicSpline.h  elasticModel1DQuadratic.cpp  elasticModel1DQuadratic.h  elasticModel2DFundamentalForms.h  elasticModel2DFundamentalFormsFabric.cpp  (+58 more)
src/python/: CMakeLists.txt
src/tests/: CMakeLists.txt
src/tools/: CMakeLists.txt
(+176 files in other folders)
